<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="16dp">

    <!-- Outfit suggestions view -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true">

        <!-- Empty view is only visible when the wardrobe does not have enough items. -->
        <LinearLayout
            android:id="@+id/empty_outfit_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/empty_outfit_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-medium"
                android:paddingTop="16dp"
                android:text="@string/empty_outfit_title_text"
                android:textAppearance="?android:textAppearanceMedium"/>

            <TextView
                android:id="@+id/empty_outfit_subtitle_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/empty_title_text"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif"
                android:paddingTop="8dp"
                android:text="@string/empty_view_subtitle_text"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#A2AAB0"/>
        </LinearLayout>

        <!-- Outfit view -->
        <ListView
            android:id="@+id/outfit_list"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </RelativeLayout>

    <!-- Weather forecast view -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true">

        <!-- Empty view is only visible when the list has no items. -->
        <TextView
            android:id="@+id/empty_daily_weather_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:textAppearance="?android:textAppearanceMedium"/>

        <!-- Loading indicator is only shown before the first load -->
        <ProgressBar
            android:id="@+id/loading_daily_weather_indicator"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"/>

        <LinearLayout
            android:id="@+id/daily_weather_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <!-- Weather title view -->
            <TextView
                android:id="@+id/weather_summary_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_summary_title"
                android:textAllCaps="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:textAppearance="?android:textAppearanceMedium"/>

            <ImageView
                android:id="@+id/icon_view"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/dailyWeatherDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:textAllCaps="true"
                android:textColor="@color/textColorHourlyForecastDetails"
                android:textSize="20sp"
                tools:text="Partly Cloudy" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerInParent="true"
                android:paddingBottom="16sp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColorHourlyForecastDetails"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_horizontal"
                        android:textSize="16sp"
                        android:text="High" />

                    <TextView
                        android:id="@+id/high_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_horizontal"
                        android:maxLines="1"
                        android:textColor="@color/textColorHourlyForecastTemperature"
                        android:textSize="18sp"
                        tools:text="55.3 F" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/textColorHourlyForecastDetails"
                        android:textSize="16sp"
                        android:text="Low" />

                    <TextView
                        android:id="@+id/low_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_horizontal"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@color/textColorHourlyForecastTemperature"
                        android:textSize="18sp"
                        tools:text="55.3 F" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
